16 Jun 2023:  Added X32 option to Board selection
5 June 2023:  Updated Analytics V4 ID
14 Jun 2022:  Fixed SVG DPI for Inkscape 1.2 SVGs
04 Apr 2021:  Fixed bug with Pocketing Z on unmerged geometry: https://openbuilds.com/threads/large-z-dive-when-cnc-pocketing.17704/
16 Mar 2021:  Improved Plasma Lead-In Algorithm
21 Jan 2021:  Updated Laser Hello World
09 Dec 2020:  Added GCODE Preview, Fixed backspace inside input issue, Updated Metro4, Revamped the Plasma CAM (note changes to IHS - update your profiles if you were using Plasma IHS), Minor cosmetic updates
02 Nov 2020:  Update placeholder text for IHS
09 Sep 2020:  Added profile for LEAD1515
15 Jul 2020:  Added support for Inkscape 1.x's 96DPI to fix #67
13 Jul 2020:  Changed built-in text tool size from selection to input for custom text sizes
10 Feb 2020:  Fixed double-back moves back with Open Ended vectors on no-offset operations, Fixed bug in Laser Rasterfill
06 Feb 2020:  Added LEAD1010 with Laser profile
04 Feb 2020:  Fixed update check to comply with Github deprecations: https://developer.github.com/changes/2019-11-05-deprecated-passwords-and-authorizations-api/
07 Oct 2019:  Added support for Open Ended Vectors with more than 2 points to GCODE generator due to bug
02 Oct 2019:  Added support for Open Ended Vectors with more than 2 points to GCODE generator
31 Jul 2019:  Updated Settings -> Machine Profile dropdown Menu
23 Jul 2019:  Added Pen Plotter: Lines Fill operation type
18 Jul 2019:  Fixed bug with Ramp Plunges
11 Jul 2019:  Fixed Tab Height bug, added improvements to Pen Plotter operations, added Angle setting to Laser Raster
01 Jul 2019:  Moved Toolpath Calculation to WebWorkers
24 Jun 2019:  Moved Gcode Preview to WebWorker
14 Jun 2019:  Added Beta of Servo based Pen Plotter CAM
29 Apr 2019:  Added Delete Selection button #49, Added Workspace and Gcode naming #51, Added .OBC file support via CONTROL
25 Apr 2019:  Added Splines, Insert to DXF Parser