@@ -377,8 +377,8 @@
 
 						<div class="window mt-2 drop-shadow">
 							<div class="window-caption bg-openbuilds">
-								<i class="fas fa-network-wired fa-fw ml-1 mr-1"></i>
-								<span class="title">Connection</span>
+								<i class="fa fa-save fa-fw ml-1 mr-1"></i>
+								<span class="title">Save GCODE File</span>
 							</div>
 							<div class="window-content p-1" id="connectiontree" style="overflow-y:scroll;">
 
@@ -387,11 +387,11 @@
 									<div class="cell p-0">
 										<div id="noDriverDetected" style="display:none;">
 
-											<p class="text-small mb-1">Unable to connect to CONTROL: Please Save your GCODE then Open it in OpenBuilds CONTROL </p>
+											<!-- <p class="text-small mb-1">Unable to connect to CONTROL: Please Save your GCODE then Open it in OpenBuilds CONTROL </p> -->
 											<button class="button success drop-shadow disabled" title="Save GCODE" id="gcodesavebtn3" onclick="saveFile();"><span id="gcodeexporticon2" class="fa fa-save icon fg-white"></span> Save GCODE</button>
 											<hr>
-											<p class="text-small m-0 p-0" id="installDriverMessage">Connecting to a machine, requires that you have the latest OpenBuilds CONTROL installed.</p>
-											<p class="text-small mb-1" id="installDriverHelp">If you have not installed it yet, you can download it below, or if you have the latest version installed already, please start it.<br> If you still see this message, we are
+											<p class="text-small m-0 p-0" id="installDriverMessage">Save the GCODE to your Computer and then Open it using CONTROL</p>
+											<!-- <p class="text-small mb-1" id="installDriverHelp">If you have not installed it yet, you can download it below, or if you have the latest version installed already, please start it.<br> If you still see this message, we are
 												experiencing a temporary problem connecting to it and you can still use the Save button above<br>
 
 												<nav data-role="ribbonmenu">
@@ -428,7 +428,7 @@
 															</div>
 														</div>
 													</div>
-												</nav>
+												</nav> -->
 
 
 
